--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,40 @@
-#mapContainer {
-height:500px;
-width: 500px;
-background: lightgrey;
-margin: 0 auto; /*centers the div*/
+body {
+  /* Sets initial loading background and page properties */
+  background: white;
+  padding: 20px;
+  font-family: sans-serif;
+}
 
+#mapContainer {
+position:absolute;
+top:0;
+bottom:0;
+width:100%;
+margin:0 auto;
+}
+
+
+.legend {
+background-color: #fff;
+border-radius: 3px;
+bottom: 30px;
+box-shadow: 0 1px 2px rgba(0,0,0,0.10);
+font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+padding: 20px;
+position: absolute;
+bottom:30px
+right: 10px;
+z-index: 1;
+}
+
+.legend h4 {
+margin: 0 0 10px;
+}
+
+.legend div span {
+border-radius: 50%;
+display: inline-block;
+height: 10px;
+margin-right: 5px;
+width: 10px;
 }
